--- a/style.css
+++ b/style.css
@@ -306,4 +306,8 @@ footer {
         font-size: 0.9rem;
         /* Tamanho da fonte do rodapé em telas pequenas */
     }
+
+    footer p {
+        margin: 2rem 2rem;
+    }
 }
